<resources>
    <string name="app_name">BoardGames</string>
    <string name="loading">Loading…</string>
    <string name="no_internet">No internet</string>
    <string name="favorite_games">Favorite games</string>
    <string name="games_search">Games search</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="email">Email</string>
    <string name="really">Really exit app?</string>
    <string name="cancel">Cancel</string>
    <string name="application_author">Application made by Lav Mahović</string>
    <string name="delete">Delete</string>
    <string name="sure">Are you sure you want to remove this item from favorite items?</string>
    <string name="rank">Rank</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="stolen_from">(mostly stolen from prof. Bele)</string>
    <string name="playerCountPlaceholder">1–5</string>
    <string name="playTimePlaceholder">90–120</string>
    <string name="playerCount">Player Count</string>
    <string name="playTime">Play Time</string>

<!--    <string name="please_wait">Please Wait&#8230;</string>-->
    <string name="search">Search</string>
    <string name="apply">apply</string>
    <string name="searchFilter">Search filter</string>
    <string name="text_favorite_games">Text favorite games</string>
    <string name="sort_by">Sort by</string>
    <string name="min_players">Min players</string>
    <string name="max_players">Max players</string>
    <string name="min_playtime">Min playtime</string>
    <string name="max_playtime">Max playtime</string>
    <string name="phone_number">Phone number</string>
    <string name="name_prefix">Name prefix</string>
    <string name="no_data_available">No data found for the selected filters</string>
    <string name="pick_contact">Pick contact number</string>
    <string name="send_message">Send message</string>
</resources>