<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/nhMarginTop">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/nhMarginTop"
        android:text="@string/text_favorite_games"
        android:textSize="@dimen/item_details_name_text_size" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/nhMarginTop">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/phone_number" />

        <EditText
            android:id="@+id/phone_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="phone" />


    </LinearLayout>

    <Button
        android:id="@+id/btnPickEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick_contact" />


</LinearLayout>