<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/paddingItems">

        <ImageView
            android:id="@+id/ivItemImage"
            android:layout_width="match_parent"
            android:layout_height="@dimen/ivHeight"
            tools:src="@drawable/board_games_about" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/nhMarginTop"
            android:textSize="@dimen/item_details_name_text_size"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_gravity="center"
            tools:text="@tools:sample/lorem" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTopDate">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/rank"
                android:textColor="@color/design_default_color_primary"
                android:textSize="@dimen/item_details_header_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvRank"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:textSize="@dimen/item_details_header_text_size"
                tools:text="1" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/playerCount"
                android:textColor="@color/design_default_color_primary"
                android:textSize="@dimen/item_details_header_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvPlayerCount"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="@dimen/item_details_header_text_size"
                tools:text="@string/playerCountPlaceholder" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTopDate">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/playTime"
                android:textColor="@color/design_default_color_primary"
                android:textSize="@dimen/item_details_header_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvPlayTime"
                android:layout_width="0dp"
                android:layout_weight="8"
                android:layout_height="wrap_content"
                android:textSize="@dimen/item_details_header_text_size"
                tools:text="@string/playTimePlaceholder" />


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/nhMarginTop"
            android:text="@string/description"
            android:textColor="@color/design_default_color_primary"
            android:textSize="@dimen/item_details_header_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/descriptionMargin"
            tools:text="@tools:sample/lorem/random" />

    </LinearLayout>
</ScrollView>